syntax = "proto3";

package grpc;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rezaAmiri123/microservice/service_finance/proto/grpc";

message Transfer {
    bytes transfer_id = 1;
    bytes from_account_id = 2;
    bytes to_account_id = 3;
    int64 amount = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
